data/derived/comb/progs/unify/prog6499.ml.out
Characters 52-54:
  let fixpoint (f,b) = wwhile (( f b = let rr=f b in (rr, rr=b)),b);;
                                                      ^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a * 'b
